# amritghimire.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  Makefile  README.md  biblioform.html  biznava.html  build.rs  feed-literature.xml  feed-tech.xml  feed.xml  finrup-budgeting-tips.html  finrup.html  flowers.html  index-1ebf7c11b0d806ca.css  index-2e4e699b9f23b3d5.css  index-6a74e238e3b4ef27.css  index-7dfafbbd6946f04b.css  index-88d50aba1f25b03f.css  index-b3c056c773a69701.css  index-dda423d68b6dfeb5.css  index.html  index.scss  package-lock.json  package.json  personal-frontend-119624a8bfe1c4a8.js  personal-frontend-119624a8bfe1c4a8_bg.wasm  personal-frontend-146270a595a799d7.js  personal-frontend-146270a595a799d7_bg.wasm  personal-frontend-17e27db320ce5833_bg.wasm  personal-frontend-1915553d29ba57fe.js  personal-frontend-1915553d29ba57fe_bg.wasm  personal-frontend-350169f7ec252c43.js  personal-frontend-350169f7ec252c43_bg.wasm  personal-frontend-3a9853784110a688.js  personal-frontend-3a9853784110a688_bg.wasm  personal-frontend-3b4b92674097c1e3.js  personal-frontend-3b4b92674097c1e3_bg.wasm  personal-frontend-3c9a3b28bdbf3a7e.js  (+85 more)
.github/workflows/: gh-pages.yml  main.yml
contents/: metadata.json  personal.json
contents/literature/: aakhir.md  aama.md  akshar.md  bethiti.md  chandrama.md  duniya.md  eyes.md  kadam.md  kavi.md  khali.md  mausam.md  muskan.md  paribartan.md  parkhai.md  prem.md  rahar.md  rajniti.md  sadbhab.md  sahar.md  sahayatri.md  sunsan-basti.md  timi.md  timro-jaadu.md  tyo-kshyan.md  ustai.md  yaad.md  yatra.md  yo-jagat.md
contents/literature/english/: conversation.md  memory.md  new-beginning.md  smile.md  stolen-glances.md  who-am-i.md  you.md
contents/tech/: biblioform-support.md  biznava-support.md  budgeting-feature-finrup.md  budgeting-tips-2025.md  finrup-advanced-automation.md  finrup-expense-tracking-guide.md  finrup-vs-mint.md  finrup-vs-ynab.md  jira-terminal.md  multi-currency-money-management.md  siri-shortcuts-expense-tracking.md  wikipedia.md
public/: 404.html  index.html
snippets/personal-frontend-3f1927461f93d00e/: inline0.js
src/: App.vue  config.example.ts  content.rs  lib.rs  main.rs  main.ts  posts.rs  utils.rs
src/components/: ContentComponent.vue  Footer.vue  HelloWorld.vue  NavBar.vue  mod.rs  newsletter.rs  pagination.rs  post_card.rs  safe_html.rs
src/components/contents/: BlogPostContent.vue  CardCollectionContent.vue  CardContent.vue  CollapseComponent.vue  ContactContent.vue  DualColumnTextContent.vue  ImageBoxContent.vue  ImageContent.vue  ImageTextContent.vue  TextContent.vue
src/components/contents/internal/: InternalBlogCard.vue  InternalHTMLTextContent.vue  InternalImageContent.vue
src/constants/: routes.ts
src/models/: blog.ts  category.ts  contents.ts  menu.ts  meta.ts
src/pages/: home.rs  mod.rs  page_not_found.rs  post.rs  post_list.rs
src/personal/: generator.rs  types.rs
src/router/: index.ts
src/services/: blog.ts  contact.ts  menu.ts  meta.ts
src/store/: index.ts  mutationTypes.ts  types.ts
src/store/modules/: meta.ts  types.ts
src/utils/: api.ts  applyBase.ts  hooks.ts
src/views/: 404.vue  PostPage.vue
tests/: test_personal_generator.rs  test_posts.rs
