[package]
name = "personal-frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
gloo-timers = "0.2"
yew = "0.19.3"
yew-router = "0.16.0"
include_dir = "0.7.2"
pulldown-cmark = "0.9.1"
serde_json = "1.0.81"
gloo-utils = "0.1.4"
web-sys = "0.3.58"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.81"
stylist = { version = "0.10.1", features = ["yew_integration"] }

[[bin]]
name = "personal_frontend"
path = "src/main.rs"

[lib]
name = "personal_frontend"
path = "src/lib.rs"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
